# sfml-car-cluster

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  cluster.service  compile.sh  config.yaml  imgui.ini  run.sh
include/imgui/: imconfig.h
src/: application.cpp  application.hpp  cluster_data.cpp  cluster_data.hpp  config.cpp  config.h  config.hpp  constants.hpp  font.hpp  headers.hpp  imgui.ini  interpolation.cpp  main.cpp  platform.cpp  platform.hpp  svg_renderer.cpp  svg_renderer.hpp
src/cluster/: cluster.cpp  cluster.hpp
src/config_ui/: config_ui.cpp
src/effects/: fade.hpp  interpolate.hpp
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
src/imgui/components/: circular_gauge.cpp  cluster_icon.cpp
src/progress/: progress.cpp  progress.hpp
src/semi_meter/: semi_meter.cpp  semi_meter.hpp
src/shaders/: circular_gradient.frag
src/splash/: splash.cpp  splash.hpp
src/velocimeter/: velocimeter.cpp  velocimeter.hpp
